--- a/DoYouTrustYourNuGetPackages.CodeTransformation.Package/DoYouTrustYourNuGetPackages.CodeTransformation.Package.csproj
+++ b/DoYouTrustYourNuGetPackages.CodeTransformation.Package/DoYouTrustYourNuGetPackages.CodeTransformation.Package.csproj
@@ -4,10 +4,12 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <!--<PackageReference Include="DoYouTrustYourNuGetPackages.MSBuildImports.Package" Version="1.0.0" />-->
+    <Compile Include="contentFiles/**/*" Pack="true" PackagePath="contentFiles/" />
   </ItemGroup>
 
+  
 </Project>
