--- a/Dependencies.AspNetCoreApi/Dependencies.AspNetCoreApi.csproj
+++ b/Dependencies.AspNetCoreApi/Dependencies.AspNetCoreApi.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
 </Project>
